
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 JUN 22a
  * in src/common.h
    - in np_t, changed fluxemfield_t tsemfcoeff[27] to fluxemfield_t tsemfcoeff[125]
  * in model/emfield/_Epotential-Bfixed/emfield.c
    - added find_DeltaVk_not_phi()
    - added find_DeltaVk_phi()
    - added find_Jstar_emf_interface_DELTAVK()
    - renamed find_Jstar_emf_interface() to find_Jstar_emf_interface_STANDARD()
    - rewrote find_Jstar_emf_interface() so it calls either find_Jstar_emf_interface_DELTAVK()
      or find_Jstar_emf_interface_STANDARD()
    - added find_linearization_coefficients_inner_node_emfield_DELTAVK()
    - renamed find_linearization_coefficients_inner_node_emfield() to
      find_linearization_coefficients_inner_node_emfield_STANDARD()
    - rewrote find_linearization_coefficients_inner_node_emfield() so that it calls either 
      find_linearization_coefficients_inner_node_emfield_DELTAVK() 
      or find_linearization_coefficients_inner_node_emfield_STANDARD()


2023 JUN 17a
  * in cycle/share/tsemf_share.c
    - in update_dUstar_emfield_SOR_node(), fixed a bug related to koffset 
    - in  update_dUstar_emfield_SOR_istation(), fixed a bug related to koffset
  * in src/common.c
    - in _al(), changed assert(theta<nd) to a more appropriate if (theta>=nd && offset!=0) fatal_error()
    - in _node_rank(), added assert(is_node_in_zone(i,j,k,domainlim));
    

2023 JUN 15b
  * in model/emfield/_Epotential*/emfield.c
    - in find_linearization_coefficients_inner_node_emfield(), made coeffgl->ke and coeffgl->ks
      equal to 0 when in 2D
  * in src/common.h
    - in gl_t, added EXM_gl3D_t tsemfcoeffzone
    - in np_t, added tsemfcoeff[27]
  * in cycle/share/cycle_share.c
    - in update_prim_emfield_mem_in_zone_4(), added a call to 